# taste.fun

./: .gitmodules  README.MD
.claude/: settings.local.json
apps/: .gitignore
apps/backend/: README.md  ecosystem.config.js  package.json  setup.ps1
apps/backend/idl/: taste_fun_core.json  taste_fun_settlement.json  taste_fun_token.json
apps/backend/src/: index.ts
apps/backend/src/config/: index.ts
apps/backend/src/database/: index.ts  migrate.ts  schema.sql
apps/smartcontract/: Anchor.env  Anchor.toml  Cargo.toml  README.md  package-lock.json
apps/smartcontract/programs/taste-fun-core/: Cargo.toml
apps/smartcontract/programs/taste-fun-core/src/: lib.rs
apps/smartcontract/programs/taste-fun-settlement/: Cargo.toml
apps/smartcontract/programs/taste-fun-settlement/src/: lib.rs
apps/smartcontract/programs/taste-fun-token/: Cargo.toml
apps/smartcontract/programs/taste-fun-token/src/: lib.rs
apps/smartcontract/programs/taste-fun-token/src/instructions/: execute_buyback.rs  initialize_theme.rs  initialize_trading_config.rs  mint_initial_tokens.rs  mod.rs  swap_sol_for_tokens.rs  swap_tokens_for_sol.rs
apps/smartcontract/shared-lib/: Cargo.toml
apps/smartcontract/shared-lib/src/: lib.rs
apps/taste.fun/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/taste.fun/app/: globals.css  layout.tsx  page.tsx
apps/taste.fun/components/: bottom-nav.tsx  layout-wrapper.tsx  providers.tsx  sidebar-nav.tsx  theme-toggle.tsx
apps/taste.fun/public/: manifest.json
apps/taste.fun/store/: theme.ts
(+42 files in other folders)
