[workspace]
members = [
    "programs/taste-fun-core",
    "programs/taste-fun-settlement",
    "programs/taste-fun-token",
]
exclude = [
    "programs/taste-fun-smart-old",
    "programs/shared"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
