[package]
name = "taste-fun-token"
version = "0.1.0"
description = "Theme token issuance and bonding curve trading for Taste.Fun"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "taste_fun_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
taste-fun-shared = { path = "../../shared-lib" }

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
